# Project-CV

./: app.py  pyproject.toml  requirements.txt
pages/: 1_UNet_Segmentation.py
