[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "project-cv"
version = "0.1.0"
dependencies = [
    "streamlit==1.28.0",
    "torch==1.13.1",
    "torchvision==0.14.1",
    "numpy==1.24.3",
    "opencv-python-headless==4.8.1.78",
    "Pillow==10.0.0",
    # Явно указываем совместимую версию rich
    "rich>=13.5.3, <14",
    # Остальные ваши пакеты...
    "segmentation-models-pytorch==0.3.2",
    "timm==0.6.13",
    "efficientnet-pytorch==0.7.1",
    "albumentations==1.3.1",
    "ultralytics==8.0.196",
    "scikit-learn==1.3.0",
    "tqdm==4.65.0"
]